--- a/src/modal/section/pending-message/_pera-wallet-connect-modal-pending-message.scss
+++ b/src/modal/section/pending-message/_pera-wallet-connect-modal-pending-message.scss
@@ -19,3 +19,23 @@
   line-height: 28px;
   letter-spacing: -0.26px;
 }
+
+.pera-wallet-connect-modal-pending-message__cancel-button {
+  display: block;
+
+  width: 100%;
+
+  padding: 14px;
+
+  color: #2c3559;
+  background-color: #f2f3f8;
+
+  border-radius: 12px;
+
+  text-decoration: none;
+  text-align: center;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: -0.09px;
+  font-weight: 500;
+}
